--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,3 +51,10 @@ dependencies = [
 
 [project.scripts]
 selenium_v_requests_comparison = "selenium_v_requests_comparison.comparison:main"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = "-ra -q"
+testpaths = [
+    "tests"
+]
