--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,4 +25,12 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest
+          pytest --cov-branch --cov-report=xml
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: joseph-c-mcguire/selenium-v-requests-comparison
+    
+      
+      
