--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "pyparsing==3.2.1",
     "PySocks==1.7.1",
     "pytest==8.3.4",
+    "pytest-cov==4.0.0",  # Added to support coverage options
     "python-dateutil==2.9.0.post0",
     "python-dotenv==1.0.1",
     "requests==2.32.3",
