--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest --cov=selenium_v_requests_comparison --cov-branch --cov-report=xml
+          pytest --cov=selenium_v_requests_comparison --cov-branch --cov-report=xml:coverage.xml
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5
         with:
